Extend Gateway metrics with Uplink Downlink Bytes
